ultimos arreglos en h1

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             </div>
         </nav>
     </header>
-    <main class="principal d-flex justify-content-center align-items-end">
-        <div class="principal__contenedorH1 d-flex align-items-center justify-content-startrow" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
-            <h1 id="" class="principal__h1 display-3 col-5 text-uppercase font-weight-normal">Lens</h1>
+    <main class="principal">
+        <div class="principal__contenedorH1 " data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200">
+            <h1 id="" class="principal__h1 ">Lens</h1>
         </div>
         <div class="carouselContainer" id="home">
             <div id="demo" class="carousel slide" data-ride="carousel">
                 <!-- Indicadores -->
-                <ul class="carousel-indicators">
+                <!-- <ul class="carousel-indicators">
                     <li data-target="#demo" data-slide-to="0" class="active"></li>
                     <li data-target="#demo" data-slide-to="1"></li>
                     <li data-target="#demo" data-slide-to="2"></li>
                     <li data-target="#demo" data-slide-to="3"></li>
-                </ul>
+                </ul> -->
                     <!-- The slideshow -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
