sitio casi terminado falta responsive

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
         <div class="carouselContainer" id="home">
             <div id="demo" class="carousel slide" data-ride="carousel">
                 <!-- Indicadores -->
-                <!-- <ul class="carousel-indicators">
+                <ul class="carousel-indicators">
                     <li data-target="#demo" data-slide-to="0" class="active"></li>
                     <li data-target="#demo" data-slide-to="1"></li>
                     <li data-target="#demo" data-slide-to="2"></li>
                     <li data-target="#demo" data-slide-to="3"></li>
-                </ul> -->
+                </ul>
                     <!-- The slideshow -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
