--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             </div>
         </nav>
     </header>
-    <main class="sec principal">
+    <main class="sec principal" id="home">
         <div class="principal__contenedorH1 " data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200">
-            <h1 id="" class="principal__h1 ">Lens</h1>
+            <h1 class="principal__h1">Lens</h1>
         </div>
-        <div class="carouselContainer" id="home">
+        <div class="carouselContainer">
             <div id="demo" class="carousel slide" data-ride="carousel">
                 <!-- Indicadores -->
                 <!-- <ul class="carousel-indicators">
@@ -61,20 +61,24 @@
                     <!-- The slideshow -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./multimedia/images/carousel/back-ori.jpg" alt="15 años oriana"
+                        <img class="imgLaptopSize" src="./multimedia/images/carousel/back-ori.jpg" alt="15 años oriana"
                         width="100%" height="auto">
+                        <img class="imgMobile" src="./multimedia/images/carousel/fotos para mq/back-ori.jpg" alt="oriana">
                     </div>
                     <div class="carousel-item">
-                        <img src="./multimedia/images/carousel/ayelen.jpg" alt="backstage ayelen"
+                        <img class="imgLaptopSize" src="./multimedia/images/carousel/ayelen.jpg" alt="backstage ayelen"
                         width="100%" height="auto">
+                        <img class="imgMobile" src="./multimedia/images/carousel/fotos para mq/ayelen.jpg" alt="ayelen">
                     </div>
                     <div class="carousel-item">
-                        <img src="./multimedia/images/carousel/boda-3.jpg" alt="boda de pablo y karina"
+                        <img class="imgLaptopSize" src="./multimedia/images/carousel/boda-3.jpg" alt="boda de pablo y karina"
                         width="100%" height="auto" >
+                        <img class="imgMobile" src="./multimedia/images/carousel/fotos para mq/boda-3.jpg" alt="boda de pablo y karina">
                     </div>
                     <div class="carousel-item">
-                        <img src="./multimedia/images/carousel/boda-4.jpg" alt="boda de rosario y lucas"
+                        <img class="imgLaptopSize" src="./multimedia/images/carousel/boda-4.jpg" alt="boda de rosario y lucas"
                         width="100%" height="auto">
+                        <img class="imgMobile" src="./multimedia/images/carousel/fotos para mq/boda-4.jpg" alt="boda de rosario y lucas">
                     </div>
                 </div>
                 <!-- Left and right controls -->
@@ -89,10 +93,10 @@
     </main>        
     <!-- SECCION NOSOTROS -->
     <section class="sec nosotros" id="saltoNos" >
-        <article class="cuadroAmarillo w-50 h-100 d-flex flex-column justify-content-center align-items-center " data-aos="fade-right" data-aos-offset="400" data-aos-easing="ease-in-sine" >
+        <article class="cuadroAmarillo " data-aos="fade-right" data-aos-offset="400" data-aos-easing="ease-in-sine" >
             <img class="cuadroAmarillo__img" src="./multimedia/images/nosotros/camara.jpg" alt="imagen lente">
             <div class="cuadroAmarillo__texto">
-                <h2 id="nos">¿Quienes somos?</h2>
+                <h2 class="nosotros__titulo" >¿Quienes somos?</h2>
                 <div class="cuadroAmarillo__contenedorParrafo mt-5 mx-5">
                     <p class="cuadroAmarillo__parrafo lead font-weight-normal ">Somos una productora con mas de 35 años de trayectoria en el sector de fotografía y video de eventos sociales e institucionales. Nos destacamos por un servicio personalizado con diferentes propuestas y la utilización de equipos de alta calidad que nos permite hacer un trabajo de excelencia.</p>
                 </div>
@@ -100,13 +104,14 @@
         </article>
     </section>
         <!-- SECCION PORTFOLIO DE EVENTOS-->
-        <section class="sec portfolio" id="saltoPort">
-            <h2 class="portfolio__titulo" id="port">
-                <span class="span__portfolio span__port">Port</span>
-                <span class="span__portfolio span__fo">fo</span>
-                <span class="span__portfolio span__lio">lio</span>
-                <span class="portfolio__titulo--media"> portfolio</span>
-            </h2>
+        <section class="sec portfolio" id="saltoPort" >
+                <h2 class="portfolio__titulo">
+                    <span class="span__portfolio span__port">Port</span>
+                    <span class="span__portfolio span__fo">fo</span>
+                    <span class="span__portfolio span__lio">lio</span>
+                    <span class="portfolio__titulo--media"> portfolio</span>
+                </h2>
+
             <article class="portfolio__contenedor__cajas">
                 <div class="portfolio__cajaXV">
                     <a class="portfolio__linkXV" href="./pagesPortfolios/portfolio15años.html">
@@ -141,7 +146,7 @@
                 </div>
             </div>
         </div>
-        <p class="servicios__lens">Contactanos para mas info</p>
+        <p class="servicios__lens">Contactanos</p>
     </section>
     <!-- SECCION CONTACTO -->
     <section class="sec contacto" id="saltoCont" >
