arreglo de carousel para mobile

--- a/index.html
+++ b/index.html
@@ -61,24 +61,16 @@
                     <!-- The slideshow -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="imgLaptopSize" src="./multimedia/images/carousel/back-ori.jpg" alt="15 años oriana"
-                        width="100%" height="auto">
-                        <img class="imgMobile" src="./multimedia/images/carousel/fotos para mq/back-ori.jpg" alt="oriana">
+                        <img class="carousel__img carousel__img1" src="./multimedia/images/carousel/back-ori.jpg" alt="15 años oriana">
                     </div>
                     <div class="carousel-item">
-                        <img class="imgLaptopSize" src="./multimedia/images/carousel/ayelen.jpg" alt="backstage ayelen"
-                        width="100%" height="auto">
-                        <img class="imgMobile" src="./multimedia/images/carousel/fotos para mq/ayelen.jpg" alt="ayelen">
+                        <img class="carousel__img carousel__img2" src="./multimedia/images/carousel/ayelen.jpg" alt="backstage ayelen">
                     </div>
                     <div class="carousel-item">
-                        <img class="imgLaptopSize" src="./multimedia/images/carousel/boda-3.jpg" alt="boda de pablo y karina"
-                        width="100%" height="auto" >
-                        <img class="imgMobile" src="./multimedia/images/carousel/fotos para mq/boda-3.jpg" alt="boda de pablo y karina">
+                        <img class="carousel__img carousel__img3" src="./multimedia/images/carousel/boda-3.jpg" alt="boda de pablo y karina">
                     </div>
                     <div class="carousel-item">
-                        <img class="imgLaptopSize" src="./multimedia/images/carousel/boda-4.jpg" alt="boda de rosario y lucas"
-                        width="100%" height="auto">
-                        <img class="imgMobile" src="./multimedia/images/carousel/fotos para mq/boda-4.jpg" alt="boda de rosario y lucas">
+                        <img class="carousel__img carousel__img4" src="./multimedia/images/carousel/boda-4.jpg" alt="boda de rosario y lucas">
                     </div>
                 </div>
                 <!-- Left and right controls -->
