ajustes finales de responsive en galeria

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     </div>
                 </div>
                 <!-- Left and right controls -->
-                <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <a class="carouselControls carousel-control-prev" href="#demo" data-slide="prev">
                     <span class="carousel-icon carousel-control-prev-icon"></span>
                 </a>
-                <a class="carousel-control-next" href="#demo" data-slide="next">
+                <a class="carouselControls carousel-control-next" href="#demo" data-slide="next">
                     <span class="carousel-icon carousel-control-next-icon"></span>
                 </a>
             </div>
